# Kino-PAX-Fork

./: CMakeLists.txt  README.md  TUNING_README.md
.claude/: settings.local.json
docs/: SPATIAL_HASH_OPTIMIZATION.md
examples/gpu/: comprehensive_benchmark.cu  executionTimeMain.cu  prune_kpax_tuning.cu  rekino_lite_executionTimeMain.cu  rekino_lite_main.cu  rekino_lite_tuning.cu  rekino_main.cu
include/ReKino/: ReKino.cuh  ReKinoLite.cuh
include/collisionCheck/: spatialHash.cuh
include/config/: config.h
include/planners/: KPAX.cuh  Planner.cuh  PruneKPAX.cuh  originalKPAX.cuh  originalPlanner.cuh
include/statePropagator/: statePropagatorSpatialHash.cuh
src/ReKino/: ReKino.cu  ReKinoLite.cu
src/collisionCheck/: spatialHash.cu
src/planners/: KPAX.cu  PruneKPAX.cu  originalKPAX.cu  originalPlanner.cu
src/statePropagator/: statePropagatorProfiled.cu  statePropagatorSpatialHash.cu
tools/: PROFILER_README.md  buildProfiler.bat  buildProfiler.sh  profilePropagation.cu  profilePropagationSpatialHash.cu
viz/: KGMT_3D.m  KGMT_3D_GPU.m  analyze_tuning.m  analyze_tuning.py  generic_plotting.m  plot_comprehensive_benchmark.m  plot_rekino_tree.m
